# 3D-template

./: CMakeLists.txt
assets/shaders/: basic.frag  basic.vert  screen.frag  screen.vert
src/: main.cpp  main_old.cpp
src/camera/: StrategyCamera.cpp  StrategyCamera.h
src/core/: Window.cpp  Window.h
src/game/: Entity.h  Game.cpp  Game.h  Player.h
src/graphics/: Framebuffer.cpp  Framebuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderableComponent.cpp  RenderableComponent.h  Shader.cpp  Shader.h  Vertex.h
src/input/: CameraController.cpp  CameraController.h  InputController.cpp  InputController.h
src/renderables/: GroundRenderer.cpp  GroundRenderer.h  PlayerRenderer.cpp  PlayerRenderer.h  Renderable.h
